# clusteiner-alns-sa

./: .gitignore  LICENSE  README.md
data/raw/EUC_Type1_Large/: 10a280.txt  10gil262.txt  10lin318.txt  10pcb442.txt  10pr439.txt  25a280.txt  25gil262.txt  25lin318.txt  25pcb442.txt  25pr439.txt  50a280.txt  50gil262.txt  50lin318.txt  50pcb442.txt
data/raw/EUC_Type1_Small/: 10berlin52.txt  10eil51.txt  10eil76.txt  10kroB100.txt  10pr76.txt  10rat99.txt  10st70.txt  15berlin52.txt  15eil51.txt  15eil76.txt  15pr76.txt  15st70.txt  25eil101.txt  25kroA100.txt  25lin105.txt  25rat99.txt  50eil101.txt  50kroA100.txt  50kroB100.txt  50lin105.txt  50rat99.txt  5berlin52.txt  5eil51.txt  5eil76.txt  5pr76.txt  5st70.txt  75lin105.txt
data/raw/EUC_Type5_Small/: 10i120-46.txt  10i30-17.txt  10i45-18.txt  10i60-21.txt  10i65-21.txt  10i70-21.txt  10i75-22.txt  10i90-33.txt  5i120-46.txt  5i30-17.txt  5i45-18.txt  5i60-21.txt  5i65-21.txt  5i70-21.txt  5i75-22.txt  5i90-33.txt  7i30-17.txt  7i45-18.txt  7i60-21.txt  7i65-21.txt  7i70-21.txt
data/raw/EUC_Type6_Large/: 18pr439-3x6.txt  20pr439-4x5.txt  25a280-5x5.txt  25gil262-5x5.txt  25lin318-5x5.txt  25pcb442-5x5.txt  36pcb442-6x6.txt  (+8 more)
docs/: dataset.md  fundamentos.md
py/: pyproject.toml
py/src/exp/: run_alns_sa.py
py/src/tcc/: instance.py  solution.py  tsplib_loader.py  verify.py
py/src/tcc/alns/: __init__.py  alns_sa.py  baselines.py  finalize.py  iterlog.py  operators_destroy.py  operators_repair.py  operators_repair_local.py  operators_repair_steiner.py  operators_repair_two_level.py  partial_state.py
(+36 files in other folders)
