[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "networkx",
    "pandas",
    "typer[all]",
]

[project.scripts]
tcc-summarize = "tcc.summarize:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tcc*", "exp*"]